--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 19
-        versionName "1.1.7"
+        targetSdkVersion 26
+        versionCode 20
+        versionName "1.1.8"
     }
     buildTypes {
         release {
@@ -33,15 +33,18 @@ dependencies {
 
     repositories {
         mavenLocal()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.1'
     compile group: 'uk.me.berndporr', name:'iirj', version: '1.0'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile "com.androidplot:androidplot-core:1.4.1"
-    compile 'com.android.support:percent:25.3.1'
+    compile 'com.android.support:percent:26.0.1'
 }
 
 dependencies {
