--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 20
-        versionName "1.1.8"
+        targetSdkVersion 27
+        versionCode 21
+        versionName "1.1.9"
     }
     buildTypes {
         release {
@@ -32,21 +31,15 @@ android {
 dependencies {
 
     repositories {
-        mavenLocal()
-        maven {
-            url "https://maven.google.com"
-        }
+        google()
     }
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
     compile group: 'uk.me.berndporr', name:'iirj', version: '1.0'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile "com.androidplot:androidplot-core:1.4.1"
-    compile 'com.android.support:percent:26.0.1'
-}
-
-dependencies {
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    compile 'com.android.support:percent:27.0.2'
+    compile 'com.google.android.gms:play-services-base:11.8.0'
 }
