--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 23
-        versionName "1.2.1"
+        versionCode 24
+        versionName "1.2.2"
     }
     buildTypes {
         release {
@@ -34,12 +34,12 @@ dependencies {
         google()
     }
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile group: 'uk.me.berndporr', name:'iirj', version: '1.0'
-    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    compile "com.androidplot:androidplot-core:1.4.1"
-    compile 'com.android.support:percent:27.1.1'
-    compile 'com.google.android.gms:play-services-base:15.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation group: 'uk.me.berndporr', name:'iirj', version: '1.0'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    implementation "com.androidplot:androidplot-core:1.4.1"
+    implementation 'com.android.support:percent:27.1.1'
+    implementation 'com.google.android.gms:play-services-base:15.0.1'
 }
