--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,17 +29,16 @@ android {
 }
 
 dependencies {
-
     repositories {
         google()
     }
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation group: 'uk.me.berndporr', name: 'iirj', version: '1.1'
-    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    implementation "com.androidplot:androidplot-core:1.4.1"
-    implementation 'com.google.android.gms:play-services-base:15.0.1'
+    implementation 'uk.me.berndporr:iirj:1.1'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.androidplot:androidplot-core:1.4.1'
+    implementation 'com.google.android.gms:play-services-base:16.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation project(':firj-release')
 }
