--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 34
-        versionName "1.2.12"
+        versionCode 35
+        versionName "1.3.0"
     }
     buildTypes {
         release {
@@ -34,11 +34,11 @@ dependencies {
     }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'uk.me.berndporr:iirj:1.1'
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.androidplot:androidplot-core:1.4.1'
+    implementation 'com.androidplot:androidplot-core:1.5.6'
     implementation 'com.google.android.gms:play-services-base:16.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(':firj-release')
 }
