--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
