Updated the prefs activity to AndroidX and now everything is up to date!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity
             android:name="tech.glasgowneuro.attysecg.PrefsActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar" />
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
