--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 41
-        versionName "1.4.2"
+        versionCode 42
+        versionName "1.4.3"
     }
     buildTypes {
         release {
@@ -35,6 +35,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'uk.me.berndporr:iirj:1.1'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.androidplot:androidplot-core:1.5.6'
