--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 43
-        versionName "1.4.4"
+        versionCode 44
+        versionName "1.4.5"
     }
     buildTypes {
         release {
@@ -43,4 +43,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:16.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(':firj-release')
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
