--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="tech.glasgowneuro.attysecg">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -11,6 +12,7 @@
         android:icon="@mipmap/ic_launcher_attysecg"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        tools:ignore="GoogleAppIndexingWarning"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <activity android:name="tech.glasgowneuro.attysecg.AttysECG">
