--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 24
-        targetSdkVersion 28
-        versionCode 48
-        versionName "1.5.2"
+        targetSdkVersion 29
+        versionCode 49
+        versionName "1.5.3"
     }
     buildTypes {
         release {
@@ -34,16 +34,16 @@ dependencies {
     }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.preference:preference:1.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'uk.me.berndporr:iirj:1.1'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.androidplot:androidplot-core:1.5.6'
-    implementation 'com.google.android.gms:play-services-base:17.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.gms:play-services-base:17.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation project(':firj-release')
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-core:17.5.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 }
 
