--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,22 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 24
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 54
         versionName "1.6.1"
     }
     buildTypes {
+        debug {
+            manifestPlaceholders = [crashlyticsCollection: "false"]
+        }
         release {
             minifyEnabled false
+            manifestPlaceholders = [crashlyticsCollection: "true"]
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
