--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:18.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation project(':firj-release')
-    implementation 'com.google.firebase:firebase-core:20.1.0'
-    implementation 'com.google.firebase:firebase-analytics:20.1.0'
+    implementation 'com.google.firebase:firebase-core:20.1.1'
+    implementation 'com.google.firebase:firebase-analytics:20.1.1'
+    implementation 'com.google.firebase:firebase-firestore:24.0.2'
     implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
+    implementation 'com.google.firebase:firebase-auth:21.0.2'
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
 }
 
