--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.4.0'
     repositories {
         google()
     }
