--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,16 @@
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+           <!-- Tell the system this app requires OpenGL ES 3.1. -->
+        <uses-feature android:glEsVersion="0x00030001" android:required="true"/>
+
+        <uses-feature android:name="android.hardware.vr.headtracking" android:required="true" />
+        <!-- Network access needed for OVRMonitor -->
+        <uses-permission android:name="android.permission.INTERNET" />
+        <!-- Volume Control -->
+        <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +28,8 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="s">
+        <meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only"/>
+        <meta-data android:name="com.oculus.supportedDevices" android:value="all" />
         <activity
             android:name=".HRexplorer"
             android:exported="false" />
@@ -29,10 +41,14 @@
 
         <activity
             android:name=".AttysECG"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Dark.NoActionBar.FullScreen"
+            android:launchMode="singleTask"
+            android:screenOrientation="landscape"
+            android:excludeFromRecents="false"
+            android:configChanges="screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
