--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "tech.glasgowneuro.attysecg"
         minSdkVersion 26
-        targetSdkVersion 31
-        versionCode 64
-        versionName "1.8.3"
+        targetSdkVersion 33
+        versionCode 65
+        versionName "1.8.4"
     }
     buildTypes {
         debug {
@@ -36,26 +36,27 @@ android {
             }
         }
     }
+    namespace 'tech.glasgowneuro.attysecg'
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
     repositories {
         google()
     }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'uk.me.berndporr:iirj:1.5'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.androidplot:androidplot-core:1.5.9'
-    implementation 'com.google.android.gms:play-services-base:18.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.gms:play-services-base:18.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation project(':firj-release')
-    implementation 'com.google.firebase:firebase-core:20.1.2'
-    implementation 'com.google.firebase:firebase-analytics:20.1.2'
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-analytics:21.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
 }
 
