--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,6 @@ org.gradle.jvmargs=-Xmx8048m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryErr
 
 android.enableJetifier=true
 android.useAndroidX=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
