--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,16 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdkVersion 34
+    compileSdk 34
 
     defaultConfig {
         applicationId "tech.glasgowneuro.attysecg"
-        minSdkVersion 30
-        targetSdkVersion 34
-        versionCode 70
-        versionName "1.8.9"
+        minSdk 33
+        targetSdk 34
+        versionCode 72
+        versionName "1.9.0"
     }
+
     buildTypes {
         debug {
             manifestPlaceholders = [crashlyticsCollection: "false"]
@@ -53,9 +54,9 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.androidplot:androidplot-core:1.5.9'
     implementation 'com.google.android.gms:play-services-base:18.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
-    implementation 'com.google.firebase:firebase-analytics:22.1.0'
-    implementation 'com.google.firebase:firebase-crashlytics:19.0.3'
+    implementation 'com.google.firebase:firebase-analytics:22.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.4.0'
 }
 
